# ayaka_bot

./: Cargo.toml
src/: __main.rs  arcs.rs  guild.rs  interaction.rs  json.rs  main.rs  member.rs  troll.rs
src/commands/: mod.rs  setup.rs
src/interaction/: menu.rs  menu_defaults.rs
src/music/: discord.rs  manager.rs  mod.rs  music_manager.rs  state.rs
