[package]
name = "ayaka_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
songbird = { git = "https://github.com/ImaMapleTree/songbird", version="0.3.22-rc0" }
serenity = "0.11.5"
tokio = { features = ["full"] }
tracing-subscriber = "0.3.16"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
