[package]
name = "ayaka_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
songbird = { git = "https://github.com/ImaMapleTree/songbird", version="0.3.22-rc0" }
serenity = { version = "0.11.5", default-features = true, features = ["client", "gateway", "rustls_backend", "model", "collector"]}
tokio = { features = ["full"] }
#tracing-subscriber = "0.3.16"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
cfg-if = "1.0.0"
serde = "1.0.148"
serde_json = "1.0.89"
tracing = "0.1.37"
rand = "0.8.5"
tracing-subscriber = "0.3.16"
regex = "1.7.0"

dotenv = "0.15.0"
