[package]
name = "ayaka_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
songbird = { git = "https://github.com/ImaMapleTree/songbird", version="0.3.22-rc0" }
serenity = { version = "0.11.5", default-features = true, features = ["client", "gateway", "rustls_backend", "model", "collector"]}
lazy_static = "1.4.0"
tokio_schedule = "0.3.0"
parking_lot = "0.12.1"
cfg-if = "1.0.0"
serde = "1.0.148"
serde_json = "1.0.89"
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { features = ["full"] }
chrono = "0.4.23"
